# Delovi

./: .gitignore  CMakeLists.txt  README.md
BUILD_MSVC2013/: CMakeCache.patch  CMakeCache.txt  cmake_install.cmake
BUILD_MSVC2015/: CMakeCache.patch  CMakeCache.txt  cmake_install.cmake
DEBUG_LINUX/: CMakeCacheInit.cmake
RELEASE_LINUX/: CMakeCacheInit.cmake
src/: CMakeLists.txt
src/common/: cpp_version_check.h  helper_macros.h  make_unique.hpp
src/delovi/: CMakeLists.txt  LogfileDocument.cpp  LogfileDocument.hpp  LogfileDocument_cpp.h  LogfileDocument_hpp.h  Mainwindow.cpp  Mainwindow.hpp  Mainwindow_cpp.h  Mainwindow_hpp.h  RegexFilterDialog.cpp  RegexFilterDialog.cpp.h  RegexFilterDialog.hpp  RegexFilterDialog.hpp.h  SimpleFilterDialog.cpp  SimpleFilterDialog.cpp.h  SimpleFilterDialog.hpp  SimpleFilterDialog.hpp.h  main.cpp  main_cpp.h  main_window.ui  regex_filter_dialog.ui  simple_filter_dialog.ui
src/delovi_lib/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  TextStreamLineParser.hpp  delovi_definitions.h  load_textfile.cpp  load_textfile.hpp  utf8_detection.hpp
src/unit_tests/: CMakeLists.txt  ut1.cpp  ut1.cpp.h
