find_package(Boost COMPONENTS random unit_test_framework system filesystem chrono)

include_directories(${DELOVI_SOURCE_DIR}/src/common)
include_directories(${DELOVI_SOURCE_DIR}/src/delovi_lib)
if(WIN32)
	include_directories(${Boost_INCLUDE_DIRS})
else(WIN32)
	include_directories(/usr/include/boost)
endif(WIN32)

if(WIN32)
	link_directories(${Boost_LIBRARY_DIRS})
else(WIN32)
	link_directories(/usr/lib/boost)
endif(WIN32)

file(GLOB UT_MISC_SRCS *.cpp *.hpp *.h)

source_group("" FILES ${UT_MISC_SRCS})

add_executable(ut1 WIN32 ${UT_MISC_SRCS})

if(WIN32)
#	set_target_properties(ut1 PROPERTIES COMPILE_DEFINITIONS_DEBUG "_CONSOLE")
#	set_target_properties(ut1 PROPERTIES COMPILE_DEFINITIONS_RELWITHDEBINFO "_CONSOLE")
#	set_target_properties(ut1 PROPERTIES COMPILE_DEFINITIONS_RELEASE "_CONSOLE")
#	set_target_properties(ut1 PROPERTIES COMPILE_DEFINITIONS_MINSIZEREL "_CONSOLE")
	set_target_properties(ut1 PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:CONSOLE")
	set_target_properties(ut1 PROPERTIES LINK_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:CONSOLE")
	set_target_properties(ut1 PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:CONSOLE")
	set_target_properties(ut1 PROPERTIES LINK_FLAGS_MINSIZEREL "/SUBSYSTEM:CONSOLE")
endif(WIN32)

#target_link_libraries(ut1 delovi_lib debug ... optimized ...)
target_link_libraries(ut1 ${Boost_LIBRARIES} delovi_lib)

if(WIN32)
	foreach(Boost_library ${Boost_LIBRARIES})
		get_filename_component(Boost_library_name ${Boost_library} NAME_WE)
		string(REGEX REPLACE "^lib(.*)" "\\1" Boost_library_name ${Boost_library_name})
		set(Boost_shared_library ${Boost_LIBRARY_DIRS}/${Boost_library_name}.dll)
		if(EXISTS ${Boost_shared_library})
			message("Boost shared library to be installed:  ${Boost_shared_library}")
			list(APPEND Boost_Install_Libraries ${Boost_shared_library})
		endif(EXISTS ${Boost_shared_library})
	endforeach(Boost_library ${Boost_LIBRARIES})
	list(REMOVE_DUPLICATES Boost_Install_Libraries)
	install(FILES ${Boost_Install_Libraries} DESTINATION Delovi)
endif(WIN32)
install(TARGETS ut1 DESTINATION Delovi)
